unpackaged/main/default/objects/ucinn_ascendv2__Installment__c/fields/ucinn_ascendv2__Expected_Less_Transaction_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Expected_Less_Transaction_Amount_Formula__c</fullName>
    <formula>IF( ISNULL(ucinn_ascendv2__Transaction_Payment_Amount__c) , ucinn_ascendv2__Transaction_Amount__c, IF(ucinn_ascendv2__Transaction_Amount__c - ucinn_ascendv2__Transaction_Payment_Amount__c &gt; 0, ucinn_ascendv2__Transaction_Amount__c - ucinn_ascendv2__Transaction_Payment_Amount__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>