unpackaged/main/default/objects/ucinn_ascendv2__Installment__c/fields/ucinn_ascendv2__Fx_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fx_Effective_Date__c</fullName>
    <label>Fx Effective Date</label>
    <type>Date</type>
</CustomField>