unpackaged/main/default/objects/ucinn_ascendv2__Installment__c/fields/ucinn_ascendv2__Operating_Entity_Payment_amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Operating_Entity_Payment_amount__c</fullName>
    <label>Operating Entity Payment amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>