unpackaged/main/default/objects/ucinn_ascendv2__Installment__c/fields/ucinn_ascendv2__Transaction_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Transaction_Payment_Amount__c</fullName>
    <label>Transaction Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>